--- a/WEBSITE/frontend/index.html
+++ b/WEBSITE/frontend/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Logo VISMED Official.png" />
+    <link rel="icon" type="image/png" href="/Logo VISMED Official 2.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet" />
     <title>Vision Medicine</title>
