--- a/WEBSITE/frontend/index.html
+++ b/WEBSITE/frontend/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1" />
     <link href="/src/index.css" rel="stylesheet" />
     <title>Vision Medicine</title>
   </head>
